--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,14 @@
   padding: 0.5rem 1rem;
   z-index: 999;
 }
+nav li{
+  display:inline-flex;
+   width:15%;
+  padding: 5px 15px;
+  text-align:justify;
+  color:#fff
+}
+
 img {
   max-width: 100%;
   max-height: 100%;
